# pakemon-c

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  pakemon.c  pakemon.h  scene_branding.c  scene_branding.h  scene_intro.c  scene_intro.h  scene_list_games.c  scene_list_games.h  scene_list_systems.c  scene_list_systems.h
